terraform/modules/compute/application-load-balancer.tf
resource "aws_lb" "main" {
  name               = "main-lb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.ecs_service_sg.id]
  subnets            = [var.public_subnet_id1, var.public_subnet_id2]
}
